@@ -1,3 +1,9 @@
+1997-09-02  Thomas E. Dickey  <dickey@clark.net>
+
+	* src/acsplit/acsplit.c:
+	nit to avoid matching 'define()' unless the contents are bracketed with
+	'[]'.
+
 1997-08-31  Thomas E. Dickey  <dickey@clark.net>
 
 	* src/slowcat/slowcat.c: allow option on pipe
